start serve service with quarkus